FEAT: 유틸리티 메서드 추가 * optional 객체를 빼는 유틸리티 메서드 추가